# rust-extension-count

./: Cargo.toml  LICENSE  README.md
src/: file.rs  main.rs
tests/: 10.baz
tests/dirA/: 16.foo  5.bar
tests/dirB/: 20  4.foo
