[package]
name = "rextc"
version = "0.1.1"
authors = ["tuydore <20150266+tuydore@users.noreply.github.com>"]
description = "Like the 'tree' command, but recursively shows file number and file sizes for on a per-extension basis."
edition = "2018"
readme = "README.md"
repository = "https://github.com/tuydore/rust-extension-count"
license = "MIT"
keywords = ["files", "extension", "extensions"]
categories = ["command-line-utilities"]

[dependencies]
structopt = "0.3"
anyhow = "1.0"