[package]
authors = ["tuydore <tuydore+github@protonmail.com>"]
categories = ["command-line-utilities"]
description = "Like the 'tree' command, but recursively shows file number and file sizes for on a per-extension basis."
edition = "2021"
keywords = ["files", "extension", "extensions"]
license = "MIT"
name = "rextc"
readme = "README.md"
repository = "https://github.com/tuydore/rust-extension-count"
version = "2.0.0"

[dependencies]
anyhow = "1.0"
glob = "0.3"

[dependencies.clap]
features = ["derive"]
version = "3.1"
